Fix scrollbars showing up in code snippets

--- a/_sass/code/layout.scss
+++ b/_sass/code/layout.scss
@@ -29,7 +29,7 @@ code {
 }
 
 pre {
-  overflow-x: scroll;
+  overflow-x: auto;
 
   > code {
     padding: 8px 0;
@@ -49,7 +49,7 @@ td.gutter {
 
 td.code {
   border: 0;
-  padding: 8px 0;
+  padding: 8px 0 8px 8px;
   margin: 0;
 }
 
